--- a/core/app/views/Accounts/_account.html
+++ b/core/app/views/Accounts/_account.html
@@ -6,7 +6,7 @@
     <table class="table table-bordered table-condensed no-margin account_list">
       <tr>
         <th>#</th>
-        <th>Market</th>
+        <th width="40px;">Market</th>
         <th>UniqueName</th>
         <th>Type</th>
         <th>MerchantId</th>
