增加墨西哥市场

--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -76,7 +76,7 @@
             <td>multiCountryOrderrSync</td>
             <td>reportOrderrxml接口同步订单数据</td>
             <td>每天的 3点11点19点 执行一次</td>
-            <td></td>
+            <td>_GET_XML_ALL_ORDERS_DATA_BY_ORDER_DATE_</td>
             <td><a href="@{Jrockends.run('multiCountryOrderrSync')}" data-confirm="确认运行?" class="btn btn-xs btn-danger">运行一次</a></td>
           </tr>
 
