--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -28,7 +28,8 @@
     <div class="box-body">
       <table class="table table-bordered">
         <tr>
-          <th width="41px;">Market</th>
+          <th width="45px;">国家</th>
+          <th>Market</th>
           <th>PENDING</th>
           <th>PAYMENT</th>
           <th>SHIPPED</th>
@@ -46,6 +47,7 @@
                   <div class="img-thumbnail flag flag-icon-background ${m.pic()}"></div>
                 </div>
               </td>
+              <td>${m.countryName()}</td>
               <td>100</td>
               <td>100</td>
               <td>100</td>
