--- a/core/app/views/Orders/indexEbay.html
+++ b/core/app/views/Orders/indexEbay.html
@@ -1,78 +1,78 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:'Ebay Orders (' + p.count() + ')'/}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
 #{/set}
 
-<div class="row-fluid">
-  <form id="search_form" class="search_form" action="@{Orders.indexEbay()}" method="POST">
-    <div class="span12">
-      <div class="input-prepend inline">
-        <span class="add-on">From:</span>
-        <input type="date" style="width:100px;" id="p_from" name="p.begin" value="${p.from?.date()}">
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <form id="search_form" class="form-inline" action="@{Orders.indexEbay()}" method="POST">
+          <div class="row-fluid">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" role="date" name="p.from" value="${p.from?.date()}">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" role="date" name="p.to" value="${p.to?.date()}">
+              </div>
+            </div>
+
+            <select id="o_market" name="p.market" class="form-control">
+              <option value="">Market(ALL)</option>
+            #{list items:models.market.M.values()}
+              <option ${_ == p.market ? 'selected' : ''} value="${_.name()}">${_}</option>
+            #{/list}
+            </select>
+
+            <select id="o_state" name="p.state" class="form-control">
+              <option value="">State(ALL)</option>
+            #{list items:models.market.Orderr.S.values()}
+              <option ${_ == p.state ? 'selected' : ''} value="${_.name()}">${_}</option>
+            #{/list}
+            </select>
+
+            <select name="p.category" id="categories" class="form-control">
+              <option value="">品线</option>
+            #{list items:categoryIds, as:'c'}
+              <option value="${c}" ${c.equals(p.category) ? 'selected':''}>${c}</option>
+            #{/list}
+            </select>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input style="width:200px;" class="form-control" name="p.search" placeholder="请选择前面查询类型下拉框" value="${p.search}">
+              <input type="hidden" name="p.page" value="${p.page}">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+          </div>
+        </form>
       </div>
-
-      <div class="input-prepend inline">
-        <span class="add-on">To:</span>
-        <input type="date" style="width:100px;" id="p_to" name="p.end" value="${p.to?.date()}">
-      </div>
-
-      <select id="o_market" name="p.market" class="inline">
-        <option value="">Market(ALL)</option>
-      #{list items:models.market.M.values()}
-        <option ${_ == p.market ? 'selected' : ''} value="${_.name()}">${_}</option>
-      #{/list}
-      </select>
-
-      <select id="o_state" name="p.state" class="inline">
-        <option value="">State(ALL)</option>
-      #{list items:models.market.Orderr.S.values()}
-        <option ${_ == p.state ? 'selected' : ''} value="${_.name()}">${_}</option>
-      #{/list}
-      </select>
-
-      <div class="input-prepend inline">
-        <select name="p.category" id="categories">
-          <option value="">品线</option>
-        #{list items:categoryIds, as:'c'}
-          <option value="${c}" ${c.equals(p.category) ? 'selected':''}>${c}</option>
-        #{/list}
-        </select>
-      </div>
-
-      <div class="inline input-append" id="search_btn">
-        <input type="hidden" name="p.page" value="${p.page}">
-        <input type="text" style="width:160px;" name="p.search" placeholder="只支持SKU查询" value="${p.search}">
-        <button class="btn btn-primary" data-loading>搜索</button>
-      </div>
-
-    </div>
-  </form>
-</div>
-
-<div class="row-fluid" id="order_list">
-  <div class="span12">
-  #{if orders.size() == 0}
-    暂时还没有订单
-  #{/if}
-  #{else }
-    <table class="table table-condensed table-bordered">
-      <tr>
-        <th>Market</th>
-        <th>Item</th>
-        <th>FBA Fee</th>
-        <th>Country</th>
-        <th>City</th>
-        <th>Postal Code</th>
-        <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数">
-          <i class="icon-question-sign"></i> OrderId
-        </th>
-        <th>MerchantOrderId</th>
-        <th>Create</th>
-        <th>Payment</th>
-        <th>State</th>
-        <th>Action</th>
-      </tr>
+      <div class="box-body">
+        <table class="table table-condensed table-bordered">
+          <tr>
+            <th>Market</th>
+            <th>Item</th>
+            <th>FBA Fee</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>Postal Code</th>
+            <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数">
+              <i class="icon-question-sign"></i> OrderId
+            </th>
+            <th>MerchantOrderId</th>
+            <th>Create</th>
+            <th>Payment</th>
+            <th>State</th>
+            <th>Action</th>
+          </tr>
         #{list items:orders, as:'ord'}
           <tr class="order_info" id="orderInfo_${ord.orderId}" data-toggle="collapse" data-target="#orderDetail_${ord.orderId}">
             <td>${ord.market.toString()}</td>
@@ -137,12 +137,11 @@
             </td>
           </tr>
         #{/list}
-      <tr class="tb_footer">
-        <td colspan="16">
-            #{bootstrap_pager pi:p, url:'' /}
-        </td>
-      </tr>
-    </table>
-  #{/else}
+        </table>
+      </div>
+      <div class="box-footer">
+      #{bootstrap_pager_v3 pi:p, url:'' /}
+      </div>
+    </div>
   </div>
 </div>
