--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -176,7 +176,7 @@
         </div>
         <label for="totalStockShipment" class="col-sm-1 control-label">总托盘数(货代)</label>
         <div class="col-sm-2">
-          <input type="text" name="ship.totalStockShipment" value="${ship.totalStockShipment}" id="totalStockShipment"/>
+          <input class="form-control" name="ship.totalStockShipment" value="${ship.totalStockShipment}" id="totalStockShipment"/>
         </div>
       </div>
 
