添加产品页面增加 autocomplete="off" 参数

--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -20,7 +20,7 @@
   <div class="col-md-12">
     <div class="box box-primary">
       <div class="box-header"></div>
-      <form action="@{Products.create()}" method="post" id="create_product_form" role="form" class="form-horizontal">
+      <form action="@{Products.create()}" method="post" id="create_product_form" role="form" class="form-horizontal" autocomplete="off">
         <div class="box-body">
           <div class="form-group">
             <label for="pro_category" class="col-sm-1 control-label">Category</label>
