--- a/core/app/views/Orders/_order_table_tr.html
+++ b/core/app/views/Orders/_order_table_tr.html
@@ -2,8 +2,8 @@
   <th>Market</th>
   <th style="width:180px;">Fees Percent(USD)</th>
   <th>Address1</th>
-  <th>国家</th>
-  <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数" style="width:200px;">
+  <th width="45px;">国家</th>
+  <th data-toggle="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数" style="width:200px;">
     <i class="icon-question-sign"></i> OrderId
   </th>
   <th>Buyer</th>
