订单页面调整

--- a/core/app/views/FBACenters/index.html
+++ b/core/app/views/FBACenters/index.html
@@ -16,7 +16,7 @@
           受影响代码: fbacenters/index.js 内对 a[name=checkFBALabel] 对象绑定的 click 事件.
           -->
           <tr>
-            <th width="30px;">Country</th>
+            <th width="40px;">市场</th>
             <th data-toggle="popover" data-content="<img src='/img/helper/fbaCenterId.jpg'>" data-placement="bottom">
               CenterId
             </th>
