--- a/core/app/views/Orders/_order_table_tr.html
+++ b/core/app/views/Orders/_order_table_tr.html
@@ -2,7 +2,7 @@
   <th width="80px;">Market</th>
   <th width="40px;" data-toggle="tooltip" title="送往国家">国家</th>
   <th style="width:180px;">Fees Percent(USD)</th>
-  <th>Address Detail</th>
+  <th width="130px;">Address Detail</th>
   <th data-toggle="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数" style="width:200px;">
     <i class="icon-question-sign"></i> OrderId
   </th>
