--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -32,7 +32,7 @@
     <th>剩余请款金额</th>
   #{/ifnot}
     <th rel="popover" content="<img src='/img/helper/fnsku.png'/>" width="95px;">FnSku</th>
-    <th>运输方式</th>
+    <th width="40px;">运输方式</th>
     <th>预计交货时间</th>
     <th>预计运输时间</th>
     <th>实际交货时间</th>
