--- a/core/app/views/Cooperators/show.html
+++ b/core/app/views/Cooperators/show.html
@@ -69,7 +69,7 @@
                       <div class="col-sm-2">
                         <input class="form-control" value="${coper.type.label()}" required readonly>
                       </div>
-                      <label for="" class="col-sm-1 control-label">Type</label>
+                      <label for="" class="col-sm-1 control-label">性质</label>
                       <div class="col-sm-2">
                         <select name="cop.nature" class="form-control">
                         #{list items:models.procure.Cooperator.OP, as:'o'}
